Premier Jet HTML complet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
 <body>
+
+<! HEADER >   
     <header>
         <div id="header">
             <img class="LogoHeader"/src="Images/logo/Booki.png" alt="Logo Booki">
@@ -27,11 +29,11 @@
         </div>
     </header>
 
-
+<! Section Recherche >
     <section>
         <div id="Topsection">
             <div i="Search">
-                <div i="Titre"><h1>Trouvez votre hébergement pour des vacances de rêve</h1></div>
+                <div class="Titre"><h1>Trouvez votre hébergement pour des vacances de rêve</h1></div>
 
                 <div i="Soustitre"><p>En plein centre-ville ou en pleine nature</p></div>
 
@@ -63,6 +65,192 @@
     </section>
 
    
+<! Section Résultats Hébergement >
+    <section>
+        <div i="BlocHébergement">
+            <div class="Titre"><h1>Hébergements à Marseille</h1></div>
+
+            <div i="ListeHébergement">
+
+                <div i="BlocRésHéber">
+                    <div i="BlocImageCanebière"></div>
+                    <div class="NomRésultat"><h2>Auberge La Canebière</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 25€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImagePort"></div>
+                    <div class="NomRésultat"><h2>Hôtel du port</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 52€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImageMouettes"></div>
+                    <div class="NomRésultat"><h2>Hôtel Les mouettes</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 76€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImageMer"></div>
+                    <div class="NomRésultat"><h2>Hôtel de la mer</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 46€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImagePanier"></div>
+                    <div class="NomRésultat"><h2>Auberge Le Panier</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 23€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImageAmina"></div>
+                    <div class="NomRésultat"><h2>Hôtel Chez Amina</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 96€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+                </div>
+
+            <div i="Afficher"><p>Afficher plus</p></div>
+
+
+            </div>
+        </div>
+
+
+        <div i="BlocPopulaires">
+            <div i="SideBlocHeader">
+                <div class="Titre"><h1>Les plus populaires</h1></div>
+                <div i="IconPop"><i class="fa-solid fa-chart-line"></i></div>
+            </div>
+
+            <div i="ListePopulaires">
+    
+                <div i="BlocRésPop">
+
+                    <div i="BlocImageMatin"></div>
+                    <div class="NomRésultat"><h2>Hôtel Le soleil du matin</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 128€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImageEau"></div>
+                    <div class="NomRésultat"><h2>Chambres d'hôtes Au coeur de l'eau</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 71€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+                    <div i="BlocImageBleu"></div>
+                    <div class="NomRésultat"><h2>Hôtel Bleu et Blanc</h2></div>
+                    <div class="PrixRésultat"><p>Nuit à partir de 68€</p></div>
+                    <div class="NoteRésultat">
+                        <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile2"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile3"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
+                        <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
+                    </div>
+
+
+    </section>
+
+<! Section activités>
+
+    <section>
+        <div i="BlocActivités">
+            <div i="TitreActivités"><h1>Activités à Marseille</h1></div>
+
+            <div i="BlocRésActivités">
+
+                <div i="BlocImageVieuxPort"></div>
+                <div class="NomRésultat"><h2>Vieux-Port</h2></div>
+               
+                <div i="BlocImagePomègues"></div>
+                <div class="NomRésultat"><h2>Fort de Pomègues</h2></div>
+
+                <div i="BlocImageCalanques"></div>
+                <div class="NomRésultat"><h2>Parc National des Calanques</h2></div>
+
+                <div i="BlocImageGarde"></div>
+                <div class="NomRésultat"><h2>Notre-Dame-de-la-Garde</h2></div>
+
+            </div>
+        </div>
+    </section>
+
+
+<! Footer >
+
+    <footer div i="Footer">
+
+        <div i="ListAbout">
+            <div i="About"><p>À propos</p>
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+        </div>
+
+        <div i="ListHébergement">
+            <div i="Hébérgement"><p>Nos hébergements</p>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Proposer votre hôtel</li>
+                </ul>
+            </div>
+        </div>
+
+        <div i="ListAssist">
+            <div i="Assistance"><p>Assistance</p>
+                <ul>
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
+        </div>
+
+    </footer>
   
 </body>
 </html>
