fin top section mobile

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <form>
                             <input type="search" value="Marseille, France" class="Search" />
                         </form>
-                        <div id="SearchButton">Rechercher</div>
+                        <button id="SearchButton"><p><div id="Rechercher">Rechercher</div><i class="fa-solid fa-magnifying-glass"></i></p></button>
                     </div>
 
                     <div id="FiltersBar">
