Article Populaires desktop

--- a/index.html
+++ b/index.html
@@ -206,23 +206,27 @@
                     </article>
 
 
-                    <article>
-                        <div i="BlocPopulaires">
+                    <article id="RésultatPopulaires">
+                        
                             <div class="Titre">
                                 <h1>Les plus populaires</h1>
+                            
+                            <div id="IconPop"><i class="fa-solid fa-chart-line"></i></div>
                             </div>
-                            <div i="IconPop"><i class="fa-solid fa-chart-line"></i></div>
 
-                            <div i="ListePopulaires">
+                            <div id="ListePopulaires">                                
 
-                                <div i="BlocRésPop">
+                                <div class="BlocRésHéber">
 
-                                    <div i="BlocImageMatin"></div>
+                                <div class="PhotoSoleil"></div>
+
+
+                                <div class="TextePop">
                                     <div class="NomRésultat">
                                         <h2>Hôtel Le soleil du matin</h2>
                                     </div>
                                     <div class="PrixRésultat">
-                                        <p>Nuit à partir de 128€</p>
+                                        <h3>Nuit à partir de 128€</h3>
                                     </div>
                                     <div class="NoteRésultat">
                                         <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
@@ -231,13 +235,20 @@
                                         <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
+                                </div>
+                                </div>
 
-                                    <div i="BlocImageEau"></div>
+                                <div class="BlocRésHéber">
+
+                                <div class="PhotoEau"></div>
+
+                                <div class="TextePop">
+
                                     <div class="NomRésultat">
                                         <h2>Chambres d'hôtes Au coeur de l'eau</h2>
                                     </div>
                                     <div class="PrixRésultat">
-                                        <p>Nuit à partir de 71€</p>
+                                        <h3>Nuit à partir de 71€</h3>
                                     </div>
                                     <div class="NoteRésultat">
                                         <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
@@ -246,13 +257,20 @@
                                         <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
+                                </div>
+                                </div>
 
-                                    <div i="BlocImageBleu"></div>
+                                <div class="BlocRésHéber">
+
+                                <div class="PhotoBleu"></div>
+
+                                <div class="TextePop">
+
                                     <div class="NomRésultat">
                                         <h2>Hôtel Bleu et Blanc</h2>
                                     </div>
                                     <div class="PrixRésultat">
-                                        <p>Nuit à partir de 68€</p>
+                                        <h3>Nuit à partir de 68€</h3>
                                     </div>
                                     <div class="NoteRésultat">
                                         <div class="Etoile1"><i class="fa-solid fa-star"></i></div>
@@ -261,7 +279,8 @@
                                         <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
-
+                                </div>
+                                </div>
                     </article>
 
 
