main tablette début

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                                 <div class="PhotoMouettes"></div>
 
-                                <div class="NomRésultat">                            
+                                <div class="NomRésultat">
                                     <h2>Hôtel Les mouettes</h2>
                                 </div>
                                 <div class="PrixRésultat">
@@ -197,26 +197,26 @@
                                     <div class="Etoile4"><i class="fa-solid fa-star"></i></div>
                                     <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                 </div>
-                           </div>
+                            </div>
                         </div>
 
-                            <div id="Afficher">
-                                <p>Afficher plus</p>
-                            </div>
+                        <div id="Afficher">
+                            <p>Afficher plus</p>
+                        </div>
                     </article>
 
 
                     <article id="RésultatPopulaires">
-                        
-                            <div class="Titre">
-                                <h1>Les plus populaires</h1>
-                            
+
+                        <div class="Titre">
+                            <h1>Les plus populaires</h1>
+
                             <div id="IconPop"><i class="fa-solid fa-chart-line"></i></div>
-                            </div>
+                        </div>
 
-                            <div id="ListePopulaires">                                
+                        <div id="ListePopulaires">
 
-                                <div class="BlocRésHéber">
+                            <div class="BlocRésHéber">
 
                                 <div class="PhotoSoleil"></div>
 
@@ -236,9 +236,9 @@
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
                                 </div>
-                                </div>
+                            </div>
 
-                                <div class="BlocRésHéber">
+                            <div class="BlocRésHéber">
 
                                 <div class="PhotoEau"></div>
 
@@ -258,9 +258,9 @@
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
                                 </div>
-                                </div>
+                            </div>
 
-                                <div class="BlocRésHéber">
+                            <div class="BlocRésHéber">
 
                                 <div class="PhotoBleu"></div>
 
@@ -280,82 +280,83 @@
                                         <div class="Etoile5"><i class="fa-solid fa-star"></i></div>
                                     </div>
                                 </div>
-                                </div>
-                    </article>
-
-
-                    <! Bloc activités>
-
-                        <article>
-                            <div i="BlocActivités">
-                                <div i="TitreActivités">
-                                    <h1>Activités à Marseille</h1>
-                                </div>
-
-                                <div i="BlocRésActivités">
-
-                                    <div i="BlocImageVieuxPort"></div>
-                                    <div class="NomRésultat">
-                                        <h2>Vieux-Port</h2>
-                                    </div>
-
-                                    <div i="BlocImagePomègues"></div>
-                                    <div class="NomRésultat">
-                                        <h2>Fort de Pomègues</h2>
-                                    </div>
-
-                                    <div i="BlocImageCalanques"></div>
-                                    <div class="NomRésultat">
-                                        <h2>Parc National des Calanques</h2>
-                                    </div>
-
-                                    <div i="BlocImageGarde"></div>
-                                    <div class="NomRésultat">
-                                        <h2>Notre-Dame-de-la-Garde</h2>
-                                    </div>
-
-                                </div>
                             </div>
-                        </article>
+                    </article>
             </main>
 
+            <! Bloc activités>
 
-            <! Footer>
+                <section>
+                    <article>
+                        <div i="BlocActivités">
+                            <div i="TitreActivités">
+                                <h1>Activités à Marseille</h1>
+                            </div>
 
-                <footer div i="Footer">
+                            <div i="BlocRésActivités">
 
-                    <div i="ListAbout">
-                        <div i="About">
-                            <p>À propos</p>
-                            <ul>
-                                <li>Fonctionnement du site</li>
-                                <li>Conditions générales</li>
-                                <li>Données et confidentialité</li>
-                            </ul>
+                                <div i="BlocImageVieuxPort"></div>
+                                <div class="NomRésultat">
+                                    <h2>Vieux-Port</h2>
+                                </div>
+
+                                <div i="BlocImagePomègues"></div>
+                                <div class="NomRésultat">
+                                    <h2>Fort de Pomègues</h2>
+                                </div>
+
+                                <div i="BlocImageCalanques"></div>
+                                <div class="NomRésultat">
+                                    <h2>Parc National des Calanques</h2>
+                                </div>
+
+                                <div i="BlocImageGarde"></div>
+                                <div class="NomRésultat">
+                                    <h2>Notre-Dame-de-la-Garde</h2>
+                                </div>
+
+                            </div>
                         </div>
-                    </div>
+                    </article>
+                </section>
 
-                    <div i="ListHébergement">
-                        <div i="Hébérgement">
-                            <p>Nos hébergements</p>
-                            <ul>
-                                <li>Charte qualité</li>
-                                <li>Proposer votre hôtel</li>
-                            </ul>
+
+                <! Footer>
+
+                    <footer div i="Footer">
+
+                        <div i="ListAbout">
+                            <div i="About">
+                                <p>À propos</p>
+                                <ul>
+                                    <li>Fonctionnement du site</li>
+                                    <li>Conditions générales</li>
+                                    <li>Données et confidentialité</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
 
-                    <div i="ListAssist">
-                        <div i="Assistance">
-                            <p>Assistance</p>
-                            <ul>
-                                <li>Centre d'aide</li>
-                                <li>Nous contacter</li>
-                            </ul>
+                        <div i="ListHébergement">
+                            <div i="Hébérgement">
+                                <p>Nos hébergements</p>
+                                <ul>
+                                    <li>Charte qualité</li>
+                                    <li>Proposer votre hôtel</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
 
-                </footer>
+                        <div i="ListAssist">
+                            <div i="Assistance">
+                                <p>Assistance</p>
+                                <ul>
+                                    <li>Centre d'aide</li>
+                                    <li>Nous contacter</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </footer>
 
 </body>
 
