maj dossier css

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 <head>
     <title>Booki</title>
     <script src="https://kit.fontawesome.com/2e1a7fc042.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/Header.css" />
-    <link rel="stylesheet" href="/css/Section Search.css" />
-    <link rel="stylesheet" href="/css/Résultats Hébergements.css" />
-    <link rel="stylesheet" href="/css/Résultats Populaires.css" />
-    <link rel="stylesheet" href="/css/Section Activités.css" />
-    <link rel="stylesheet" href="/css/Footer.css" />
+    <link rel="stylesheet" href="css/styles.css" >
+    <link rel="stylesheet" href="css/Header.css" >
+    <link rel="stylesheet" href="css/SectionSearch.css" >
+    <link rel="stylesheet" href="css/RésultatsHébergements.css" >
+    <link rel="stylesheet" href="css/RésultatsPopulaires.css" >
+    <link rel="stylesheet" href="css/SectionActivités.css" >
+    <link rel="stylesheet" href="css/Footer.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
 </head>
 
 
 <body>
 
-    <! HEADER>
+    <!-- HEADER -->
         <header>
             <div id="header">
                 <img src="Images/logo/Booki.png" alt="Logo Booki">
@@ -41,7 +42,7 @@
 
 
 
-        <! Section Recherche>
+        <!-- Section Recherche-->
 
             <section>
                 <div id="Topsection">
@@ -54,10 +55,9 @@
                     <div id="Searchbar">
                         <div id="LocLogo"><i class="fa-sharp fa-solid fa-location-dot"></i></div>
                         <form method="get" action="">
-                            <input type="search" placeholder="Marseille, France" class="Search" />
+                            <input type="search" placeholder="Marseille, France" class="Search" >
                         
-                            <div id="SearchButton"><button>                            
-                                <p> <div id="Rechercher">Rechercher</div><i class="fa-solid fa-magnifying-glass"></i></p>
+                            <div id="SearchButton"><button>Rechercher<span><i class="fa-solid fa-magnifying-glass"></i></span>
                             </button></div>
                         </form>
                     </div>
@@ -79,13 +79,13 @@
                 </div>
             </section>
 
-            <! Bloc Résultats>
+            <!-- Bloc Résultats-->
 
 
             <main>
 
 
-                <! Section Résultats Hébergement>
+                <!-- Section Résultats Hébergement-->
 
                     <article id="RésultatHébergement">
                         <div class="Titre">
@@ -315,7 +315,7 @@
                     </article>
             </main>
 
-            <! Bloc activités>
+            <!-- Bloc activités-->
 
                 <section>
 
@@ -372,7 +372,7 @@
                 </section>
 
 
-                <! Footer>
+                <!-- Footer-->
 
                     <footer>
                     <div id="Footer">
