--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
 </head>
-
 
 
 <body>
@@ -45,8 +42,7 @@
 
 
 
-    <!-- Section Recherche -->
-    
+    <!-- Section Recherche-->
 
     <section>
         <div id="Topsection">
@@ -98,10 +94,10 @@
 
             <div id="ListeHébergement">
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoCanebière"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -120,10 +116,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoPort"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du Port Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -142,10 +138,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoMouettes"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel les Mouettes Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -164,10 +160,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoMer"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la Mer Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -186,10 +182,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoPanier"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -208,10 +204,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésHéber">
+                <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoAmina"></div>
+                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Chez Amina Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -247,11 +243,11 @@
 
 
             <div id="RésPopu">
-                <div class="BlocRésPop">
+
+                <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoSoleil"></div>
-
+                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel Le Soleil du Matin Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -270,10 +266,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésPop">
+                <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoEau"></div>
+                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'Hôtes Au Coeur de l'Eau Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -293,10 +289,10 @@
                     </a>
                 </div>
 
-                <div class="BlocRésPop">
+                <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoBleu"></div>
+                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -331,40 +327,40 @@
             <div id="BlocRésActivités">
 
 
-                <div class="BlocActivité">
+                <div class="CardActivités">
                     <a href="#">
 
-                        <div id="BlocImageVieuxPort"></div>
+                        <div class="PhotoActivité"><img src="/Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Vieux-Port</h2>
                         </div>
                     </a>
                 </div>
 
-                <div class="BlocActivité">
+                <div class="CardActivités">
                     <a href="#">
 
-                        <div id="BlocImagePomègues"></div>
+                        <div class="PhotoActivité"><img src="/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Fort de Pomègues</h2>
                         </div>
                     </a>
                 </div>
 
-                <div class="BlocActivité">
+                <div class="CardActivités">
                     <a href="#">
 
-                        <div id="BlocImageCalanques"></div>
+                        <div class="PhotoActivité"><img src="/Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Les Calanques Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Parc National des Calanques</h2>
                         </div>
                     </a>
                 </div>
 
-                <div class="BlocActivité">
+                <div class="CardActivités">
                     <a href="#">
 
-                        <div id="BlocImageGarde"></div>
+                        <div class="PhotoActivité"><img src="\Images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Notre-Dame-de-la-Garde</h2>
                         </div>
