--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <div class="CardActivités">
                     <a href="#">
 
-                        <div class="PhotoActivité"><img src="/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues Photo" style="width:100%"/></div>
+                        <div class="PhotoActivité"><img id="Pomègues" src="/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Fort de Pomègues</h2>
                         </div>
