--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -119,7 +119,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du Port Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du Port Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -141,7 +141,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel les Mouettes Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel les Mouettes Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -163,7 +163,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la Mer Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la Mer Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -185,7 +185,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -207,7 +207,7 @@
                 <div class="CardHébergements">
                     <a href="#" class="fill-div">
 
-                        <div class="PhotoHéberg"><img src="/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Chez Amina Photo" style="width:100%"/></div>
+                        <div class="PhotoHéberg"><img src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Chez Amina Photo" style="width:100%"/></div>
 
                         <div class="TexteHeberg">
 
@@ -247,7 +247,7 @@
                 <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel Le Soleil du Matin Photo" style="height:100%"/></div>
+                        <div class="PhotoPopu"><img src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel Le Soleil du Matin Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -269,7 +269,7 @@
                 <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'Hôtes Au Coeur de l'Eau Photo" style="height:100%"/></div>
+                        <div class="PhotoPopu"><img src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'Hôtes Au Coeur de l'Eau Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -292,7 +292,7 @@
                 <div class="CardPopulaires">
                     <a href="#">
 
-                        <div class="PhotoPopu"><img src="/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc Photo" style="height:100%"/></div>
+                        <div class="PhotoPopu"><img src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc Photo" style="height:100%"/></div>
 
                         <div class="TextePop">
 
@@ -330,7 +330,7 @@
                 <div class="CardActivités">
                     <a href="#">
 
-                        <div class="PhotoActivité"><img src="/Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port Photo" style="width:100%"/></div>
+                        <div class="PhotoActivité"><img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Vieux-Port</h2>
                         </div>
@@ -340,7 +340,7 @@
                 <div class="CardActivités">
                     <a href="#">
 
-                        <div class="PhotoActivité"><img id="Pomègues" src="/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues Photo" style="width:100%"/></div>
+                        <div class="PhotoActivité"><img id="Pomègues" src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Fort de Pomègues</h2>
                         </div>
@@ -350,7 +350,7 @@
                 <div class="CardActivités">
                     <a href="#">
 
-                        <div class="PhotoActivité"><img src="/Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Les Calanques Photo" style="width:100%"/></div>
+                        <div class="PhotoActivité"><img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Les Calanques Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Parc National des Calanques</h2>
                         </div>
@@ -360,7 +360,7 @@
                 <div class="CardActivités">
                     <a href="#">
 
-                        <div class="PhotoActivité"><img src="\Images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde Photo" style="width:100%"/></div>
+                        <div class="PhotoActivité"><img src="Images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde Photo" style="width:100%"/></div>
                         <div class="NomRésultat">
                             <h2>Notre-Dame-de-la-Garde</h2>
                         </div>
